--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,130 @@
   height: 100%;
   width: 760px;
 }
+
+.mensal {
+	position: relative;
+	margin:0px;padding:0px;
+	width:100%;
+	box-shadow: 10px 10px 5px #888888;
+	border:1px solid #000000;
+	
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+	
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+	
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+	
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
+}
+.mensal table{
+    border-collapse: collapse;
+    border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}
+.mensal tr:last-child td:last-child {
+	-moz-border-radius-bottomright:0px;
+	-webkit-border-bottom-right-radius:0px;
+	border-bottom-right-radius:0px;
+}
+.mensal table tr:first-child td:first-child {
+	-moz-border-radius-topleft:0px;
+	-webkit-border-top-left-radius:0px;
+	border-top-left-radius:0px;
+}
+.mensal table tr:first-child td:last-child {
+	-moz-border-radius-topright:0px;
+	-webkit-border-top-right-radius:0px;
+	border-top-right-radius:0px;
+}
+.mensal tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:0px;
+	-webkit-border-bottom-left-radius:0px;
+	border-bottom-left-radius:0px;
+}.mensal tr:hover td{
+	background-color:#ffffff;
+}
+.mensal td{
+	vertical-align:middle;
+	background-color:#ffffff;
+	border:1px solid #000000;
+	border-width:0px 1px 1px 0px;
+	text-align:center;
+	padding:30px;
+	font-size:10px;
+	font-family:Verdana;
+	font-weight:normal;
+	color:#000000;
+}
+
+.mensal tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}
+.mensal tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}
+.mensal tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+.mensal tr:first-child td{
+		background:-o-linear-gradient(bottom, #000000 5%, #969696 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #969696) );
+	background:-moz-linear-gradient( center top, #000000 5%, #969696 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#969696");	background: -o-linear-gradient(top,#000000,969696);
+
+	background-color:#000000;
+	border:0px solid #000000;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:14px;
+	font-family:Verdana;
+	font-weight:bold;
+	color:#ffffff;
+}
+.mensal tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #000000 5%, #969696 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #969696) );
+	background:-moz-linear-gradient( center top, #000000 5%, #969696 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#969696");	background: -o-linear-gradient(top,#000000,969696);
+	background-color:#000000;
+}
+.mensal tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.mensal tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
+}
+
+.hoje{
+	position: relative;
+	background-color: #dfdfdf !important;
+}
+
+.naoValido {
+	background-color: #808080 !important;
+}
+
+.valido {
+	position: relative;
+}
+
+.dia {
+	font-size: 18px;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+}
+
+.evento {
+	display: inline-block;
+	background-color: blue;
+	font-size: 15px;
+}
