--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,18 @@
 	border-bottom-left-radius:0px;
 }.mensal tr:hover td{
 	background-color:#ffffff;
+		
+
 }
 .mensal td{
 	vertical-align:middle;
 	background-color:#ffffff;
 	border:1px solid #000000;
 	border-width:0px 1px 1px 0px;
+	padding: 0px;
 	text-align:center;
-	padding:30px;
+	width: 100px;
+	height: 100px;
 	font-size:10px;
 	font-family:Verdana;
 	font-weight:normal;
@@ -81,10 +85,9 @@
 	border-width:0px 0px 0px 0px;
 }
 .mensal tr:first-child td{
-		background:-o-linear-gradient(bottom, #000000 5%, #969696 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #969696) );
+	background:-o-linear-gradient(bottom, #000000 5%, #969696 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #000000), color-stop(1, #969696) );
 	background:-moz-linear-gradient( center top, #000000 5%, #969696 100% );
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000", endColorstr="#969696");	background: -o-linear-gradient(top,#000000,969696);
-
 	background-color:#000000;
 	border:0px solid #000000;
 	text-align:center;
@@ -125,10 +128,63 @@
 	position: absolute;
 	top: 0px;
 	right: 0px;
+	z-index: 20;
 }
 
-.evento {
-	display: inline-block;
-	background-color: blue;
+.events-container 
+{
+	position: absolute;
+	right: 0;
+	left: 0;
 	font-size: 15px;
+	
+	top: 50%;
+	transform: translateY(-50%);
+	
+	padding-top: 20px;
+	max-height: 82px;
+	overflow-y: auto;
+}
+
+.evento
+{
+	background-color: blue;
+	margin: 2px 0;
+}
+
+.container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
+.previous {
+	padding: 0 1px;
+	border: 0;
+	float: left;
+	width: 30px;
+	height: 36px;
+	background-image: url("../resources/previous.jpg");
+}
+
+.next {
+	padding: 0 1px;
+	border: 0;
+	float: right;
+	width: 30px;
+	height: 36px;
+	background-image: url("../resources/next.jpg");
+}
+
+.fotoEvento {
+	width: 300px;
+	height: 300px;
+}
+
+h1{
+	margin: 0px;
+}
+
+input:focus {
+	outline:none;
 }
