--- a/css/style.css
+++ b/css/style.css
@@ -2047,13 +2047,15 @@ p a:hover {
 	margin: 2px 0;
 }
 
-.container {
+.container 
+{
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
 
-.previous {
+.previous 
+{
 	padding: 0 1px;
 	border: 0;
 	float: left;
@@ -2063,7 +2065,8 @@ p a:hover {
     background-color: Transparent;
 }
 
-.next {
+.next 
+{
 	padding: 0 1px;
 	border: 0;
 	float: right;
@@ -2073,21 +2076,31 @@ p a:hover {
     background-color: Transparent;
 	}
 
-.fotoEvento {
+.fotoEvento 
+{
 	min-width: 400px;
 	max-width: 600px;
 	height: auto;
 }
 
-h1{
+h1
+{
 	text-align: center;
 	margin: 0px;
 }
 
-input:focus {
+input:focus 
+{
 	outline:none;
 }
 
-.content{
+.content
+{
 	padding-left: 200px;
+}
+
+.containerConvite
+{
+	padding: 15px;
+    background-color: #ce4718 !important;
 }
