--- a/css/style.css
+++ b/css/style.css
@@ -1933,7 +1933,7 @@ p a:hover {
 	margin: 40px 0 0 0;
 	padding:0px;
 	width:100%;
-	
+
 }
 .mensal table{
     border-collapse: collapse;
@@ -2026,16 +2026,16 @@ p a:hover {
 	z-index: 20;
 }
 
-.events-container 
+.events-container
 {
 	position: absolute;
 	right: 0;
 	left: 0;
 	font-size: 15px;
-	
+
 	top: 50%;
 	transform: translateY(-50%);
-	
+
 	padding-top: 20px;
 	max-height: 82px;
 	overflow-y: auto;
@@ -2047,14 +2047,14 @@ p a:hover {
 	margin: 2px 0;
 }
 
-.container 
+.container
 {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
 
-.previous 
+.previous
 {
 	padding: 0 1px;
 	border: 0;
@@ -2065,7 +2065,7 @@ p a:hover {
     background-color: Transparent;
 }
 
-.next 
+.next
 {
 	padding: 0 1px;
 	border: 0;
@@ -2076,7 +2076,7 @@ p a:hover {
     background-color: Transparent;
 	}
 
-.fotoEvento 
+.fotoEvento
 {
 	width: 650px;
 	height: auto;
@@ -2088,7 +2088,7 @@ h1
 	margin: 0px;
 }
 
-input:focus 
+input:focus
 {
 	outline:none;
 }
@@ -2126,9 +2126,9 @@ input:focus
 	padding: 15px;
 }
 .containerComentario {
-	box-sizing: border-box;       
-	-moz-box-sizing: border-box;                          
-	-webkit-box-sizing: border-box; 
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	background-color: #cba200;
 	height: 160px;
 	border-style: solid;
@@ -2194,6 +2194,54 @@ li {
 	margin-left: 50%;
 	width: 50%;
 }
+
+.semanal
+{
+  position: relative;
+  margin: 40px 0 0 0;
+  padding:0px;
+  padding-top: 100px;
+  width:100%;
+}
+
+.semanal table
+{
+  border-collapse: collapse;
+  border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}
+
+.semanal tr td:first-child {
+  background-color: rgb(123,136,70);
+	border:0px solid #C0AC66;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:14px;
+	font-family:Verdana;
+	font-weight:bold;
+	color:#ffffff;
+}
+
+.semanal td {
+  background-color: rgb(174,192,102);
+	vertical-align:middle;
+	border:1px solid #C0AC66;
+	border-width:0px 1px 1px 0px;
+	padding: 0px;
+	text-align:center;
+	width: 100px;
+	height: 100px;
+	font-size:14px;
+	font-family:Verdana;
+	font-weight:normal;
+}
+
+.semanal td:hover {
+	background-color:#ffffff;
+}
+
 
 #remover {
 	background-color: red !important;
